--- a/simple.html
+++ b/simple.html
@@ -5,6 +5,7 @@
   <body>
     <h2>Welcome to my <a href="#">page</a></h2>
     <p>This is the first paragraph</p>
+    <p>Pride cometh before the fall</p>
     .
     <!-- this is the end -->
   </body>
