--- a/GUI/index.html
+++ b/GUI/index.html
@@ -1,1 +1,9 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h1>Test</h1>
+</body>
+</html>
