--- a/GUI/index.html
+++ b/GUI/index.html
@@ -4,6 +4,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Test</h1>
+  <div id="search-container">
+    <input id="search-input" type="text" placeholder="Enter your search query">
+    <button id="search-button">Search</button>
+  </div>
 </body>
 </html>
