Made search bar centered

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -4,9 +4,11 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div id="search-container">
-    <input id="search-input" type="text" placeholder="Enter your search query">
-    <button id="search-button">Search</button>
+  <div class="search-container">
+    <form action="" class="search-bar">
+      <input id="search-input" type="text" placeholder="Enter your search query">
+      <button id="img-button"><img id = "search-img" src="/GUI/Images/starry_search.png"></button>
+    </form>
   </div>
 </body>
 </html>
