StellarSearch title and search bar

--- a/GUI/index.html
+++ b/GUI/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <h1 id="search-name">StellarSearch</h1>
   <div class="search-container">
     <form action="" class="search-bar">
       <input id="search-input" type="text" placeholder="Enter your search query">
